--- a/ActivityLifyCycle/res/values/strings.xml
+++ b/ActivityLifyCycle/res/values/strings.xml
@@ -5,8 +5,9 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_second">SecondActivity</string>
-    
     <string name="next">next</string>
     <string name="dialog">dialog</string>
+    <string name="tolist">tolist</string>
+    <string name="title_activity_list">ListActivity</string>
 
 </resources>
